--- a/safespace/src/index.scss
+++ b/safespace/src/index.scss
@@ -1,3 +1,5 @@
+$grey : #e6e6e6;
+
 html {
   font-size: 62.5%;
 }
@@ -5,7 +7,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  background-color: $grey;
+  font-family: 'Titillium Web', -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
@@ -18,4 +21,5 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
 
